--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -1,25 +1,48 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ .Release.Name }} 
+  labels:
+    app: {{ .Release.Name }} 
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Chart.Name }}
+      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ .Chart.Name }}
+        app: {{ .Release.Name }}
     spec:
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        - name: {{ .Release.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - containerPort: {{ .Values.service.port }}
+            - name: http
+              containerPort: {{ .Values.service.port }}
+              protocol: TCP
           env:
             - name: AWS_ACCESS_KEY_ID
-              value: {{ .Values.awsCredentials.accessKey | quote }}
+              valueFrom:
+                secretKeyRef:
+                  name: aws-creds # This MUST match the secret you created
+                  key: AWS_ACCESS_KEY_ID
             - name: AWS_SECRET_ACCESS_KEY
-              value: {{ .Values.awsCredentials.secretKey | quote }}
+              valueFrom:
+                secretKeyRef:
+                  name: aws-creds # This MUST match the secret you created
+                  key: AWS_SECRET_ACCESS_KEY
+          # Liveness and Readiness Probes are a best practice
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 5
+            periodSeconds: 10
