--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -14,10 +14,16 @@ service:
   type: LoadBalancer
   port: 5001
 ingress:
-  enabled: false
-  # hosts:
-  #   - host: chart-example.local
-  #     paths: ["/"]
+  enabled: true
+  className: "nginx"  # Change to match your ingress controller (nginx, traefik, istio, etc.)
+  annotations:
+    # nginx.ingress.kubernetes.io/rewrite-target: /
+    # cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Uncomment if using cert-manager
+  hosts:
+    - host: flask-aws-app.netanelen.com  
+      paths:
+        - path: /
+          pathType: Prefix
 awsCredentials:
   accessKey: ""
   secretKey: ""
