--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-svc
 spec:
   # If Ingress is enabled, use ClusterIP. Otherwise, use the type from values.yaml
-  type: {{ .Values.ingress.enabled | ternary "LoadBalancer" .Values.service.type }}
+  type: {{ .Values.ingress.enabled | ternary "ClusterIP" .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
