--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -31,7 +31,7 @@ spec:
             pathType: {{ .pathType | default "Prefix" }}
             backend:
               service:
-                name: {{ $.Release.Name }}-svc
+                name: {{ $.Release.Name }}
                 port:
                   number: {{ $.Values.service.port }}
           {{- end }}
