--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: ste18nati/flask-aws-monitor # Change this
-  tag: "v59" # Jenkins will update this tag
+  tag: "placeholder" # Jenkins will update this tag
   pullPolicy: Always
 resources:
   limits:
